@@ -45,6 +45,7 @@
 - fix dlopen() error handling in sss module.
 - fix configure string length tests for sss library.
 - dont retry ldap connect if not required.
+- fix getautomntbyname_r() declaration.
 
 28/06/2011 autofs-5.0.6
 -----------------------
